--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,17 +78,21 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: GeneralSans
+      fonts:
+        - asset: assets/fonts/GeneralSans-Regular.ttf
+        - asset: assets/fonts/GeneralSans-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/GeneralSans-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/GeneralSans-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/GeneralSans-Italic.ttf
+          style: italic
+
+
+    
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
