--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.3.1
   flutter_svg: ^2.1.0
   get_it: ^8.0.3
+  file_picker: ^10.1.9
 
 dev_dependencies:
   flutter_test:
