--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,13 @@ dependencies:
   flutter_svg: ^2.1.0
   get_it: ^8.0.3
   file_picker: ^10.1.9
+  dio: ^5.8.0+1
+  dartz: ^0.10.1
+  connectivity_plus: ^6.1.4
+  equatable: ^2.0.7
+  either_dart: ^1.0.0
+  bloc: ^9.0.0
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
