--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   either_dart: ^1.0.0
   bloc: ^9.0.0
   flutter_bloc: ^9.1.1
+  firebase_core: ^3.13.1
+  firebase_messaging: ^15.2.6
 
 dev_dependencies:
   flutter_test:
