--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   flutter_bloc: ^9.1.1
   firebase_core: ^3.13.1
   firebase_messaging: ^15.2.6
+  mobile_scanner: ^7.0.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
