--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.kallaUProBengkel</string>
+	<string>com.autodhil.kallauprobengkel</string>
 	<key>PROJECT_ID</key>
 	<string>kalla-urip</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:11743303784:ios:4c8c0ce55dedb3e2bb43dd</string>
+	<string>1:11743303784:ios:5d8038dcf9f68faebb43dd</string>
 </dict>
 </plist>
