--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,9 +34,21 @@ android {
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
+        targetSdk = 35
         versionCode = flutter.versionCode
         versionName = flutter.versionName
+        
+        // Add 16KB page size support
+        ndk {
+            abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86_64'
+        }
+    }
+
+    // Add support for 16KB page size
+    packaging {
+        jniLibs {
+            useLegacyPackaging = false
+        }
     }
 
        signingConfigs {
@@ -64,7 +76,7 @@ flutter {
 }
 
 dependencies {
-    implementation platform('com.google.firebase:firebase-bom:33.0.0') // Cek versi terbaru
+    implementation platform('com.google.firebase:firebase-bom:33.6.0') // Updated to latest version
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-messaging'
     // ...
