--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   shimmer: ^3.0.0
   webview_flutter: ^4.9.0
   permission_handler: ^11.3.1
+  flutter_inappwebview: ^6.1.5
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.4
